<resources>
    <string name="app_name">MyGestorApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="telefono">Teléfono</string>
    <string name="contrasenha">Contraseña</string>
    <string name="tareas">Mis tareas</string>
    <string name="lista_tareas">lista tareas</string>
    <string name="lista_usuarios">lista usuarios</string>
    <string name="inicio_sesion">INICIO DE SESIÓN</string>
    <string name="contrasenha_oculta">******</string>
    <string name="lorem" />
</resources>
