<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_adduser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/nombre"
            android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
            android:textColor="@color/md_indigo_500" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/usuario"
            android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
            android:textColor="@color/md_indigo_500" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_dark" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/correo_electronico"
            android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
            android:textColor="@color/md_indigo_500" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/telefono"
            android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
            android:textColor="@color/md_indigo_500" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/contrasenha"
            android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
            android:textColor="@color/md_indigo_500" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="Tipo de usuario"
            android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
            android:textColor="@color/md_indigo_500" />

        <Spinner
            android:id="@+id/type_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:entries="@array/entries_type_user"
            tools:listitem="@android:layout/simple_list_item_1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|right"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:tint="@android:color/white"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_check" />

    </LinearLayout>

</LinearLayout>